--- a/locales/fr/home.json
+++ b/locales/fr/home.json
@@ -2,7 +2,7 @@
   "hero": {
     "title": "Smoothies Frais, Propulsés à Vélo",
     "subtitle": "Mélangeurs écologiques pour des événements inoubliables",
-    "tagline": "BONNES VIBRATIONS, VÉLOS VERTS, GOÛT EXCELLENT.",
+    "tagline": "BONNES VIBES, VÉLOS VERTS, GOÛT EXCELLENT.",
     "bookNow": "Réserver",
     "ctaButton": "Réserver",
     "ourBikes": "Nos Vélos à Smoothies",
